--- a/index.html
+++ b/index.html
@@ -5,32 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
 </head>
 <body>
   <main>
     <div class="hero">
-      <h1>Learn to code by watching others</h1>
-      <p>
-        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-        but understanding how developers think is invaluable. 
-      </p>
-      <div class="offer">
-        Try it free 7 days then $20/mo. thereafter
-      </div>
-      <div class="form-wrapper">
-        <form action="#" class="form1">
-          <input type="text" name="first name" id="name" placeholder="First Name">
-          <input type="text" name="last name" id="lastname" placeholder="Last Name">
-          <input type="email" name="email" id="email" placeholder="Email Address">
-          <input type="password" name="password" id="password">
-          <button type="submit">Claim your free trial</button>
-          <p> By clicking the button, you are agreeing to our 
-            <span>Terms and Services</span>
-          </p>
-        </form>
-      </div>       
+        <div class="left-box">
+            <h1>Learn to code by watching others</h1>
+            <p>
+              See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+              but understanding how developers think is invaluable. 
+            </p>
+        </div>
+        <div class="right-box">
+            <div class="offer">
+                <span>Try it free 7 days </span> then $20/mo. thereafter
+            </div>
+            <div class="form-wrapper">
+                <form action="#" class="form1">
+                    <input type="text" name="first name" id="name" placeholder="First Name">
+                        <img class="error-icon" src="/images/icon-error.svg" alt="">
+                    <p class="error-message f">First name cannot be empty</p>
+                    <input type="text" name="last name" id="lastname" placeholder="Last Name">
+                        <img class="error-icon" src="/images/icon-error.svg" alt="">
+                    <p class="error-message l">Last name cannot be empty</p>
+                    <input type="email" name="email" id="email" placeholder="Email Address">
+                        <img class="error-icon" src="/images/icon-error.svg" alt="">
+                    <p class="error-message e">Looks like this is not an email</p>
+                    <input type="password" name="password" id="password" placeholder="Password">
+                        <img class="error-icon" src="/images/icon-error.svg" alt="">
+                    <p class="error-message p">Password cannot be empty</p>
+                    <button type="submit" value="submit">Claim your free trial</button>
+                </form>
+                <p class="terms"> By clicking the button, you are agreeing to our <span>Terms and Services </span></p>
+               
+            </div>       
+        </div>
     </div>
   </main>
 
