--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
         </div>
         <div class="right-box">
             <div class="offer">
-                <span>Try it free 7 days </span> then $20/mo. thereafter
+                <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
             </div>
             <div class="form-wrapper">
-                <form action="#" class="form1">
+                <form action="#" class="form">
                     <div class="form-control">
-                      <input class="" type="text" name="first name" id="fname" placeholder="First Name">
+                      <input class="" type="text" name="first name" id="fname" aria-label="name" placeholder="First Name">
                         <img class="error-icon" src="/images/icon-error.svg" alt="">
-                        <small class="error-message"><em>First name cannot be empty</em></small>
+                        <small><em>First Name cannot be empty</em></small>
                     </div>
                     <div class="form-control">
-                      <input type="text" name="last name" id="lname" placeholder="Last Name">
+                      <input type="text" name="last name" id="lname" aria-label="last name" placeholder="Last Name">
                       <img class="error-icon" src="/images/icon-error.svg" alt="">
-                      <small class="error-message"><em>Last name cannot be empty</em> </small>
+                      <small><em>Last Name cannot be empty</em></small>
                     </div>
                     <div class="form-control">
-                      <input type="email" name="email" id="email" placeholder="Email Address">
+                      <input type="email" name="email" id="email" aria-label="email"placeholder="Email Address">
                         <img class="error-icon" src="/images/icon-error.svg" alt="">
-                        <small class="error-message"><em>Looks like this is not an email</em> </small>
+                        <small><em>Looks like this is not an email</em></small>
                     </div>
                     <div class="form-control">
-                      <input type="password" name="password" id="password" placeholder="Password">
+                      <input type="password" name="password" aria-label="password"id="password" placeholder="Password">
                       <img class="error-icon" src="/images/icon-error.svg" alt="">
-                      <small class="error-message"><em>Password cannot be empty</em></small>
+                      <small><em>Password cannot be empty</em></small>
                     </div> 
                       <button type="submit" value="submit">Claim your free trial</button>
                       <p class="terms"> By clicking the button, you are agreeing to our <span>Terms and Services </span></p>                
